fix(style): fix banner and header spacings and font definitions

--- a/src/assets/style/helpers.scss
+++ b/src/assets/style/helpers.scss
@@ -1,7 +1,7 @@
 @import './_variables';
 
 .container {
-  max-width: 80rem;
+  max-width: 75rem;
   margin: 0 auto;
 }
 
